Fixed surefire unable to access module and implement 75% code coverage check for classes